--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meu-freela-m2",
+  "name": "meu-freela-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/abelkeveen/meu-freela-m2/issues"
   },
-  "homepage": "https://github.com/abelkeveen/meu-freela-m2#readme"
+  "homepage": "https://github.com/abelkeveen/meu-freela-m2#readme",
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "swagger-ui-express": "^5.0.1"
+  }
 }
