--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^11.7.4",
+    "mochawesome": "^7.1.4",
     "supertest": "^7.1.4",
     "swagger-ui-express": "^5.0.1"
   }
